# card_roulette_rust

./: Cargo.toml  README.md
src/: card_roulette.rs  main.rs
src/simulate/: manage_results.rs  mod.rs
