[package]
name = "card_roulette"
version = "0.1.0"
authors = ["Dhya El Bahri <dhya.bahri@icloud.com>"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = "4.5.3"
csv = "1.3.0"
rand = "0.8.5"
serde = "1.0.197"
serde_json = "1.0.114"

[dependencies.uuid]
version = "1.8.0"
features = [
    "v4",                # Lets you generate random UUIDs
    "fast-rng",          # Use a faster (but still sufficiently random) RNG
    "macro-diagnostics", # Enable better diagnostics for compile-time UUIDs
]
